[package]
name = "wxls"
authors = ["skkugoon <baesangil0906@gmail.com>"]
description = "Webassembly code for xls function generation"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "./license"
keywords = ["Microsoft Excel", "Microsoft Office JS", "WebAssembly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
wasm-bindgen-test = "0.2"