[package]
name = "wxls"
repository = "https://github.com/SKKUGoon/wxls"
authors = ["skkugoon <baesangil0906@gmail.com>"]
description = "Webassembly code for xls function generation"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["Microsoft Excel", "Microsoft Office JS", "WebAssembly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
matches = "0.1"
